--- a/styles.css
+++ b/styles.css
@@ -635,7 +635,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    width: 140px;
+    min-width: 140px;
 }
 .links {
     display: flex;
